feat: Implement project management with creation, membership, roles, and email verification.